--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
         <input type="text" id="texto-tarefa">
         <ol id="lista-tarefas"></ol>
-        <button id="criar-tarefa"></button>
-        <button id="mover-cima"></button>
-        <button id="mover-baixo"></button>
-        <button id="remover-selecionado"></button>
-        <button id="apaga-tudo"></button>
-        <button id="remover-finalizados"></button>
-        <button id="salvar-tarefas"></button>
+        <button id="criar-tarefa">Criar Tarefa</button>
+        <button id="mover-cima">P/ Cima</button>
+        <button id="mover-baixo">P/ Baixo</button>
+        <button id="remover-selecionado">Remover Selecionado</button>
+        <button id="apaga-tudo">Apagar Tudo</button>
+        <button id="remover-finalizados">Remover Finalizado</button>
+        <button id="salvar-tarefas">Salvar Lista</button>
 
     </main>
     <script src="script.js"></script>
