--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <button id="criar-tarefa">Criar Tarefa</button>
         <button id="mover-cima">P/ Cima</button>
         <button id="mover-baixo">P/ Baixo</button>
-        <button id="remover-selecionado">Remover Selecionado</button>
+        <button id="remover-selecionado">Remover Selecionados</button>
         <button id="apaga-tudo">Apagar Tudo</button>
-        <button id="remover-finalizados">Remover Finalizado</button>
+        <button id="remover-finalizados">Remover Finalizados</button>
         <button id="salvar-tarefas">Salvar Lista</button>
 
     </main>
