Estilizando a página com CSS

--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto ToDo List</title>
+    <script src="https://kit.fontawesome.com/cfd4e8c865.js" crossorigin="anonymous"></script> 
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Minha Lista de Tarefas</h1>
-    </header>
-    <main>
         <p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
         <input type="text" id="texto-tarefa">
-        <ol id="lista-tarefas"></ol>
-        <button id="criar-tarefa">Criar Tarefa</button>
-        <button id="mover-cima">P/ Cima</button>
-        <button id="mover-baixo">P/ Baixo</button>
-        <button id="remover-selecionado">Remover Selecionados</button>
-        <button id="apaga-tudo">Apagar Tudo</button>
-        <button id="remover-finalizados">Remover Finalizados</button>
-        <button id="salvar-tarefas">Salvar Lista</button>
-
+    </header>
+    <main class="main-content">
+        <div class="botoes">
+            <button id="criar-tarefa"><i class="fas fa-plus"></i></button>
+            <button id="mover-cima"><i class="fas fa-arrow-up"></i></button>
+            <button id="mover-baixo"><i class="fas fa-arrow-down"></i></button>
+            <button id="apaga-tudo"><i class="far fa-trash-alt"></i></button>
+            <button id="salvar-tarefas"><i class="far fa-save"></i></button>
+            <button id="remover-selecionado">Remover Selecionados</button>
+            <button id="remover-finalizados">Remover Finalizados</button>
+        </div>
+        <div class="lista">
+            <ol id="lista-tarefas"></ol>
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
+
 </html>
